# vox

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.claude/commands/: vox.commit.md
.specify/memory/: constitution.md
crates/vox/: Cargo.toml  build.rs
crates/vox/src/: main.rs  tray.rs
crates/vox_core/: Cargo.toml
crates/vox_core/src/: asr.rs  audio.rs  config.rs  diagnostics.rs  dictionary.rs  error.rs  gpu.rs  hotkey_interpreter.rs  injector.rs  llm.rs  log_sink.rs  logging.rs  models.rs  pipeline.rs  power.rs  recovery.rs  state.rs  vad.rs  vox_core.rs
crates/vox_core/src/asr/: stitcher.rs
crates/vox_core/src/audio/: capture.rs  debug_tap.rs  resampler.rs  ring_buffer.rs
crates/vox_core/src/diagnostics/: audio_injector.rs  handlers.rs  listener.rs  screenshot.rs
crates/vox_core/src/injector/: commands.rs  macos.rs  windows.rs
crates/vox_core/src/llm/: processor.rs  prompts.rs
crates/vox_core/src/models/: downloader.rs  format.rs
crates/vox_core/src/pipeline/: controller.rs  orchestrator.rs  state.rs  transcript.rs
crates/vox_core/src/vad/: chunker.rs  silero.rs
crates/vox_core/tests/: hotkey_interpreter_tests.rs  models_download.rs
crates/vox_diag/: Cargo.toml
crates/vox_diag/src/: client.rs  protocol.rs  vox_diag.rs
crates/vox_diag/src/net/: uds.rs
crates/vox_mcp/: Cargo.toml  build.rs
crates/vox_mcp/src/: main.rs
crates/vox_tool/: Cargo.toml  build.rs
crates/vox_tool/src/: main.rs
crates/vox_ui/: Cargo.toml
crates/vox_ui/src/: button.rs  dictionary_panel.rs  history_panel.rs  hotkey_recorder.rs  icon.rs  key_bindings.rs  layout.rs  log_panel.rs  model_panel.rs  overlay_hud.rs  scrollbar.rs  select.rs  settings_panel.rs  slider.rs  text_input.rs  theme.rs  toggle.rs  vox_ui.rs  waveform.rs  workspace.rs
docs/: audio-debug-tap-plan.md  design.md
docs/features/: 001-workspace-scaffolding.md  002-audio-capture.md  003-voice-activity-detection.md  004-speech-recognition.md  005-llm-post-processing.md  006-text-injection.md  007-pipeline-orchestration.md  008-model-management.md  009-application-state-settings.md  010-custom-dictionary.md  011-gpui-application-shell.md  012-overlay-hud.md  013-settings-window.md  014-system-tray-hotkeys.md  015-error-handling-packaging.md
packaging/macos/: Info.plist  build-app.sh  build-dmg.sh  entitlements.plist
packaging/windows/: build-msi.ps1
packaging/windows/wix/: main.wxs
scripts/: download-models.ps1  download-models.sh
specs/001-workspace-scaffolding/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-workspace-scaffolding/checklists/: requirements.md
specs/002-audio-capture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-audio-capture/checklists/: requirements.md
specs/003-voice-activity-detection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-voice-activity-detection/checklists/: requirements.md
specs/003-voice-activity-detection/contracts/: vad-api.md
specs/004-speech-recognition/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-speech-recognition/checklists/: requirements.md
specs/004-speech-recognition/contracts/: asr-engine.md
specs/005-llm-post-processing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-llm-post-processing/checklists/: requirements.md
specs/005-llm-post-processing/contracts/: post-processor.md
specs/006-text-injection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-text-injection/checklists/: full-review.md  requirements.md
specs/006-text-injection/contracts/: injector-api.md
specs/007-pipeline-orchestration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-pipeline-orchestration/checklists/: cross-cutting.md  requirements.md
specs/007-pipeline-orchestration/contracts/: dictionary.md  focused_app.md  pipeline.md  transcript.md
specs/008-model-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-model-management/checklists/: requirements.md
specs/008-model-management/contracts/: models-api.md
specs/009-app-state-settings/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-app-state-settings/checklists/: requirements.md
specs/009-app-state-settings/contracts/: public-api.md
specs/010-custom-dictionary/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-custom-dictionary/checklists/: requirements.md
specs/010-custom-dictionary/contracts/: public-api.md
specs/011-gpui-app-shell/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-gpui-app-shell/checklists/: requirements.md
specs/011-gpui-app-shell/contracts/: public-api.md
specs/012-overlay-hud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-overlay-hud/checklists/: requirements.md
specs/012-overlay-hud/contracts/: display-state-api.md  overlay-hud-api.md  waveform-api.md
specs/013-settings-window/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-settings-window/checklists/: requirements.md
specs/013-settings-window/contracts/: internal-interfaces.md
specs/014-tray-hotkeys/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-tray-hotkeys/checklists/: requirements.md
specs/014-tray-hotkeys/contracts/: hotkey-interpreter.md
specs/015-error-logging-packaging/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-error-logging-packaging/checklists/: requirements.md
specs/016-audio-debug-tap/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-audio-debug-tap/checklists/: requirements.md
specs/016-audio-debug-tap/contracts/: debug_tap_api.md
specs/017-diagnostics-cli-mcp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+2 files in other folders)
