[package]
name = "vox"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vox"
path = "src/main.rs"

[dependencies]
vox_core = { path = "../vox_core" }
vox_ui = { path = "../vox_ui" }
gpui.workspace = true
serde.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# pin core-text/core-graphics to avoid version split in zed-font-kit
# (core-text 21.1 pulls core-graphics 0.25, conflicting with font-kit's 0.24)
[target.'cfg(target_os = "macos")'.dependencies]
core-text = "=21.0.0"
core-graphics = "=0.24.0"
