[package]
name = "vox_diag"
version.workspace = true
edition.workspace = true

[lib]
name = "vox_diag"
path = "src/vox_diag.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
dirs = "5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Networking_WinSock",
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
