[package]
name = "vox_mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vox-mcp"
path = "src/main.rs"

[dependencies]
vox_diag = { path = "../vox_diag" }
rmcp = { version = "0.17", features = ["server", "macros", "transport-io"] }
schemars = "1"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
dirs = "5"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
