[package]
name = "vox_tool"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vox-tool"
path = "src/main.rs"

[dependencies]
vox_diag = { path = "../vox_diag" }
clap = { version = "4", features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
base64.workspace = true
dirs = "5"
